Fix JWT weak-key auth failure and add SUPER_ADMIN role (with review hardening)
Two production auth bugs from the qahvoon.uz deployment logs, plus the
security follow-ups an adversarial review surfaced.

== Bug 1: WeakKeyException broke all login/token-refresh ==
A short JWT_SECRET (39 bytes / 312 bits) produced an HMAC key too weak
for the algorithm in previously-issued token headers, so jjwt threw
WeakKeyException on every verify.
- JwtKeys.deriveSigningKey() SHA-512-hashes any configured secret into a
  fixed 512-bit key — length can never again be too weak — and JwtUtil
  pins HS512 explicitly instead of letting jjwt infer the algorithm.
- ConsumerAuthService (consumer OTP tokens, still HS256) now derives the
  SAME key, because the shared JwtAuthenticationFilter verifies every
  token type through JwtUtil. Cross-verification is covered by test.

== Bug 2: "No enum constant UserRole.SUPER_ADMIN" 500'd that login ==
A users row had role=SUPER_ADMIN with no enum constant, so JPA
hydration threw and blocked login.
- Added SUPER_ADMIN as a strict superset of ADMIN: grantedRoleNames()
  emits ROLE_SUPER_ADMIN + ROLE_ADMIN so all existing hasRole('ADMIN')
  gates pass; RestaurantAuthorizationService's 3 programmatic admin
  checks now use isAdminLevel().
- Added an UNKNOWN sentinel + UserRoleConverter so any unrecognised DB
  role resolves to a disabled, zero-authority account instead of a 500.

== Hardening from adversarial security review ==
- register(): reject self-assigning admin-level (or UNKNOWN) roles. The
  public permitAll /auth/register copied the requested role verbatim, so
  adding SUPER_ADMIN created an anonymous-superadmin path (and the
  anonymous-ADMIN path already existed). Closes both.
- UserRoleConverter.convertToDatabaseColumn(UNKNOWN) now throws instead
  of writing "UNKNOWN" — persisting the sentinel would irreversibly
  overwrite the original unrecognised role string on the next flush.
- refreshToken(): catch JwtException and return 400, not 500